HIP dissector of the HIP_CIPHER parameter is wrong
This issue was migrated from bug 7111 in our old bug tracker.
Original bug information:
Reporter: fvidalmeca@pacovi.es
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
hip_cipher-base-working.diff: Patch to fix the HIP_CIPHER parameter
sample.pcap: Sample of an R1 message including an HIP_CIPHER with NULL-ENCRYPT Cipher-Id