From Paco via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=7111 HIP dissector of the HIP_CIPHER parameter is wrong

From me:
Add a hf_tlv_cipher_id and use proto_tree_add_item

svn path=/trunk/; revision=42096